--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>10点视频网-最新地址发布页</title>
-<meta name="keywords" content="10点视频网是一个绿色干净无广告的领域，站内收集了大家一致欢喜的分享，是个优质绿色网站">
-<meta name="description" content="10点视频网是一个绿色干净无广告的领域，站内收集了大家一致欢喜的分享，是个优质绿色网站">
+		<title>极品少女-最新地址发布页</title>
+<meta name="keywords" content="极品少女是一个绿色干净无广告的领域，站内收集了大家一致欢喜的分享，是个优质绿色网站">
+<meta name="description" content="极品少女是一个绿色干净无广告的领域，站内收集了大家一致欢喜的分享，是个优质绿色网站">
 <meta content="always" name="referrer">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 	    <link rel="icon" href="./favicon.ico" type="image/x-icon"/>
