--- a/index.html
+++ b/index.html
@@ -1,53 +1,24 @@
-<!DOCTYPE html>
+
 <html>
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>10点视频网-最新地址发布页</title>
-<meta name="keywords" content="10点视频网是一个绿色干净无广告的领域，站内收集了大家一致欢喜的分享，是个优质绿色网站">
-<meta name="description" content="10点视频网是一个绿色干净无广告的领域，站内收集了大家一致欢喜的分享，是个优质绿色网站">
-<meta content="always" name="referrer">
-<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-	    <link rel="icon" href="./favicon.ico" type="image/x-icon"/>
-        <style>
-            *{margin:0;padding:0}
-            body{font-size:18px;font-family:Droid Sans,Helvetica,Arial;color:#333;text-align:center;background:#f8f8f8}
-            .top{height:60px;padding:10px 0;background:#366}
-            .f24{font-size:24px;line-height:40px;color:#fff}
-            .f16{font-size:16px;color:#fff}
-            .main{padding:30px 0}
-            .x2{font-size:16px;line-height:40px;color:#333}
-            .xianlu{line-height:42px;margin:0 auto 16px;color:#888}
-            .xianlu tr{text-align:left}
-            .xianlu th{font-weight:normal}
-            .xianlu td{font-size:20px}
-            .xianlu a{color:#2c90ff;text-decoration:none}
-            .youlian{line-height:40px;color:#888}
-            .youlian a{color:#2c90ff;text-decoration:none}
-            .des{font-size:16px;line-height:40px}
-            .des img{vertical-align:text-top}
-        </style>
-	</head>
-	
-		<div class="top">
-			<div class="f24">亲爱的朋友</div>
-			<div class="f16">这里是10点视频发布页</div>
-		</div>
-		<div class="main">
-            <div class="x2"><b>·</b>&nbsp;&nbsp;✨重要提醒✨收藏本页面，避免迷路！&nbsp;&nbsp;<b>·</b></div>
-            <table class="xianlu">
-                <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://10d.sdsp34.xyz/10dian" target="_blank">10d.sdsp34.xyz/10dian</a></td></tr>
-		    <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://10d.sdsp33.xyz/10dian" target="_blank">10d.sdsp33.xyz/10dian</a></td></tr>
-                <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://10d.sdsp32.xyz/10dian" target="_blank">10d.sdsp32.xyz/10dian</a></td></tr>
-	        <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://10d.sdsp31.xyz/10dian" target="_blank">10d.sdsp31.xyz/10dian</a></td></tr>
-                <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://10d.sdsp30.xyz/10dian" target="_blank">10d.sdsp30.xyz/10dian</a></td></tr>
-                <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://10d.sdsp20.xyz/10dian" target="_blank">10d.sdsp20.xyz/10dian</a></td></tr>
-                <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://10d.sdsp10.xyz/10dian" target="_blank">10d.sdsp10.xyz/10dian</a></td></tr>
-                <tr><th>永久地址&nbsp;&nbsp;</th><td><a href="https://3旻覇.sd301.xyz/杨枝甘露" target="_blank">3旻覇.sd301.xyz/杨枝甘露</a></td></tr>
-            </table>
-            <div class="youlian">发送任意邮件到：malatangav@gmail.com，自动回复最新地址</div>
-	     <div class="youlian">*近期部分国产浏览器屏蔽网址，推荐使用Chrome谷歌浏览器、Edge浏览器访问。</div>
-            <div class="des">CopyRight © 2023 10点视频</div>
-        </div>
+        <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+<title>富強、民主、文明、和諧、自由、平等、公正、法治、愛國、敬業、誠信、友善</title>
+</head>
+<body>
+<script type="text/javascript">
+    //定时2s后跳转主页
+    setInterval("goMain()",3000);
+function goMain(){
+var urlList=["https://miaomiao7.miaomiao2.sbs","https://miaomiao6.miaomiao2.sbs","https://miaomiao6.miaomiao2.sbs"];
+	document.location =urlList[Math.floor(Math.random()*urlList.length)]+"?"+window.location.href.split('?')[1];
+   }
+    </script>
+<p style="text-align:center">
+正在打開最新地址，請等待3秒鐘...<br>
+<br>
+爱是一道光，如此美妙<br>
+<br>
+</p>
+</body>
 
-</html>
