--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-<title>¸»Š¡¢ÃñÖ÷¡¢ÎÄÃ÷¡¢ºÍÖC¡¢×ÔÓÉ¡¢Æ½µÈ¡¢¹«Õı¡¢·¨ÖÎ¡¢Û‡ø¡¢¾´˜I¡¢Õ\ĞÅ¡¢ÓÑÉÆ</title>
+<title>å¯Œå¼·ã€æ°‘ä¸»ã€æ–‡æ˜ã€å’Œè«§ã€è‡ªç”±ã€å¹³ç­‰ã€å…¬æ­£ã€æ³•æ²»ã€æ„›åœ‹ã€æ•¬æ¥­ã€èª ä¿¡ã€å‹å–„</title>
 </head>
 <body>
 <script type="text/javascript">
-    //¶¨Ê±2sºóÌø×ªÖ÷Ò³
+    //å®šæ—¶2såè·³è½¬ä¸»é¡µ
     setInterval("goMain()",3000);
 function goMain(){
 var urlList=["https://miaomiao7.miaomiao2.sbs","https://miaomiao6.miaomiao2.sbs","https://miaomiao6.miaomiao2.sbs"];
@@ -15,9 +15,9 @@ var urlList=["https://miaomiao7.miaomiao2.sbs","https://miaomiao6.miaomiao2.sbs"
    }
     </script>
 <p style="text-align:center">
-ÕıÔÚ´òé_×îĞÂµØÖ·£¬ÕˆµÈ´ı3ÃëçŠ...<br>
+æ­£åœ¨æ‰“é–‹æœ€æ–°åœ°å€ï¼Œè«‹ç­‰å¾…3ç§’é˜...<br>
 <br>
-°®ÊÇÒ»µÀ¹â£¬Èç´ËÃÀÃî<br>
+çˆ±æ˜¯ä¸€é“å…‰ï¼Œå¦‚æ­¤ç¾å¦™<br>
 <br>
 </p>
 </body>
