--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@ xmlhttp.send(params);
         return url.replace(/\/favicon\.ico$/, '/');
     }
 
-    checkIcon('https://fennen7.fennen6.sbs/favicon.ico', 'result1', 10000);
-    checkIcon('https://fennen7.fennen6.sbs/favicon.ico', 'result2', 10000);
-    checkIcon('https://fennen7.fennen6.sbs/favicon.ico', 'result3', 10000);
+    checkIcon('https://xn--kiva430fpia.jpsnfb.buzz/%E6%9E%81%E5%93%81/index.html', 'result1', 10000);
+    checkIcon('https://xn--kiva430fpia.jpsnfb.buzz/%E6%9E%81%E5%93%81/index.html', 'result2', 10000);
+    checkIcon('https://xn--kiva430fpia.jpsnfb.buzz/%E6%9E%81%E5%93%81/index.html', 'result3', 10000);
 </script>
 
 </body>
