--- a/index.html
+++ b/index.html
@@ -1,119 +1,48 @@
 
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,user-scalable=no">
-<title>富強、民主、文明、和諧、自由、平等、公正、法治、愛國、敬業、誠信、友善</title>
-<style>
-html, body { background: #ff00ba; font-family: 'Ubuntu'; } * { box-sizing: border-box; } .box { width: 450px; height: 100%; max-height: 500px; min-height: 450px; background: #ffffff; border-radius: 20px; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); padding: 30px 50px; } .box .box__description { position: absolute; top: 20px; left: 50%; transform: translateX(-50%); text-align: left; } .box .box__description .box__description-container { color: #f10f02; width: 380px; font-size: 18px; margin: 0 auto; text-align: center; } .box .box__description .box__description-container .box__description-title { font-size: 24px; letter-spacing: 0.5px; text-align: center; } .box .box__description .box__description-container .box__description-text { color: #333333; line-height: 20px; margin-top: 20px; } .box .box__description ul { list-style-type: none; font-size: 14px; font-size: 1.1rem; margin-top: 20px; padding: 0; padding-left: 5px; } .box .box__description ul li { margin: 8px 0; padding: 0 } .box .box__description ul small { font-size: .8em; color: #339933; margin-left: 10px } .box .box__description ul li a { text-decoration: none; color: #333333; } .box .box__description ul li a:hover { color: #CCCCCC } .box .box__description ul li a:hover small { color: inherit } @media(max-width:770px) { .box { width: 350px; } .box .box__description .box__description-container { width: 300px; } .box .box__description .box__description-container .box__description-title { font-size: 19px; } .box .box__description .box__description-container .box__description-text { font-size: 15px; }img {
-        height: 0;
-        width: 0;
-    } }
- </style>
-</head>
-<body>
-    <div class="box">
-        <div class="box__description">
-            <div class="box__description-container">
-                <h1 class="box__description-title">永久发布页:baohe.sbs</h1>
-                <div class="box__description-text">如果无法访问请换（电信或联通）网络再访问本站，移动网络频繁屏蔽本站</div>
-                <h3 id="countdown">选择最快线路</h2>
-               	<div>【站点1】<span id="result1"></span></div>
-              <div>【站点2】<span id="result2"></span></div>
-                 <div>【站点3】<span id="result3"></span></div>
-                <ul><div id="fastestResult"></div></ul>
-          </div>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>极品少女网-最新地址发布页</title>
+<meta name="keywords" content="极品少女网是一个绿色干净无广告的领域，站内收集了大家一致欢喜的分享，是个优质绿色网站">
+<meta name="description" content="极品少女网是一个绿色干净无广告的领域，站内收集了大家一致欢喜的分享，是个优质绿色网站">
+<meta content="always" name="referrer">
+<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+	    <link rel="icon" href="./favicon.ico" type="image/x-icon"/>
+        <style>
+            *{margin:0;padding:0}
+            body{font-size:18px;font-family:Droid Sans,Helvetica,Arial;color:#333;text-align:center;background:#f8f8f8}
+            .top{height:60px;padding:10px 0;background:#366}
+            .f24{font-size:24px;line-height:40px;color:#fff}
+            .f16{font-size:16px;color:#fff}
+            .main{padding:30px 0}
+            .x2{font-size:16px;line-height:40px;color:#333}
+            .xianlu{line-height:42px;margin:0 auto 16px;color:#888}
+            .xianlu tr{text-align:left}
+            .xianlu th{font-weight:normal}
+            .xianlu td{font-size:20px}
+            .xianlu a{color:#2c90ff;text-decoration:none}
+            .youlian{line-height:40px;color:#888}
+            .youlian a{color:#2c90ff;text-decoration:none}
+            .des{font-size:16px;line-height:40px}
+            .des img{vertical-align:text-top}
+        </style>
+	</head>
+	
+		<div class="top">
+			<div class="f24">亲爱的朋友</div>
+			<div class="f16">这里是极品少女发布页</div>
+		</div>
+		<div class="main">
+            <div class="x2"><b>·</b>&nbsp;&nbsp;✨重要提醒✨收藏本页面，避免迷路！&nbsp;&nbsp;<b>·</b></div>
+            <table class="xianlu">
+                <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://星星点灯.jpsnfb.buzz/极品" target="_blank">https://星星点灯.jpsnfb.buzz/极品</a></td></tr>
+	
+            </table>
+            <div class="youlian">发送任意邮件到：@gmail.com，自动回复最新地址</div>
+	     <div class="youlian">*近期部分国产浏览器屏蔽网址，推荐使用Chrome谷歌浏览器、Edge浏览器访问。</div>
+            <div class="des">CopyRight © 2023 极品少女</div>
         </div>
-    </div>
 
-
-<script>
-
-var referrer = document.referrer;
-var xmlhttp = new XMLHttpRequest();
-xmlhttp.onreadystatechange = function() {
-  if (this.readyState == 4 && this.status == 200) {
-    console.log("ok");
-  }
-};
-var url = " ";
-var params = "referrer=" + encodeURIComponent(referrer);
-xmlhttp.open("POST", url, true);
-xmlhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-xmlhttp.send(params);
-
-
-    function checkIcon(url, resultElementId, timeout) {
-        var startTime = new Date().getTime();
-        var statusElement = document.getElementById(resultElementId);
-
-        var iconImage = new Image();
-
-        var timeoutId = setTimeout(function() {
-            iconImage.src = ''; // 终止加载
-            var endTime = new Date().getTime();
-            var duration = endTime - startTime;
-            statusElement.textContent = '访问超时，用时 ' + duration + ' ms';
-            compareAndDisplayFastest(url, duration);
-        }, timeout);
-
-        iconImage.onload = function() {
-            clearTimeout(timeoutId); // 清除超时计时器
-            var endTime = new Date().getTime();
-            var duration = endTime - startTime;
-            statusElement.textContent = '可以访问，用时 ' + duration + ' ms';
-            compareAndDisplayFastest(url, duration);
-
-            // 开始倒计时3秒
-            startCountdown();
-        };
-
-        iconImage.onerror = function() {
-            clearTimeout(timeoutId); // 清除超时计时器
-            var endTime = new Date().getTime();
-            var duration = endTime - startTime;
-            statusElement.textContent = '无法访问，用时 ' + duration + ' ms';
-            compareAndDisplayFastest(url, duration);
-        };
-
-        iconImage.src = url;
-    }
-
-    function compareAndDisplayFastest(url, duration) {
-        var fastestResultElement = document.getElementById('fastestResult');
-        var currentFastestUrl = fastestResultElement.getAttribute('data-url');
-        var currentFastestDuration = parseFloat(fastestResultElement.getAttribute('data-duration'));
-
-        if (!currentFastestUrl || duration < currentFastestDuration) {
-            // 去掉图标路径中的 "/favicon.ico"
-            var urlWithoutFavicon = removeFaviconPath(url);
-
-            fastestResultElement.innerHTML = '即将跳转：<a href="' + urlWithoutFavicon + '" target="_blank">' + urlWithoutFavicon + '</a>';
-            fastestResultElement.setAttribute('data-url', url);
-            fastestResultElement.setAttribute('data-duration', duration);
-
-
-    function redirect() {
-        var fastestResultElement = document.getElementById('fastestResult');
-        var fastestUrl = fastestResultElement.getAttribute('data-url');
-
-  
-
-        // 跳转到最终的网址
-        window.location.href = finalRedirectUrl;
-    }
-
-
-
-    checkIcon('https://xn--kiva430fpia.jpsnfb.buzz/%E6%9E%81%E5%93%81/index.html', 'result1', 10000);
-    checkIcon('https://xn--kiva430fpia.jpsnfb.buzz/%E6%9E%81%E5%93%81/index.html', 'result2', 10000);
-    checkIcon('https://xn--kiva430fpia.jpsnfb.buzz/%E6%9E%81%E5%93%81/index.html', 'result3', 10000);
-</script>
-
-</body>
 </html>
