--- a/jpsn/index.html
+++ b/jpsn/index.html
@@ -39,9 +39,12 @@
             <div class="x2"><b>·</b>&nbsp;&nbsp;✨重要提醒✨收藏本页面，避免迷路！&nbsp;&nbsp;<b>·</b></div>
             <table class="xianlu">
                 <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://星星点灯.jpsnfb.buzz/极品" target="_blank">https://星星点灯.jpsnfb.buzz/极品</a></td></tr>
+	       <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://星星点灯.jpsnfb.buzz/极品" target="_blank">https://星星点灯.jpsnfb.buzz/极品</a></td></tr>
+		   <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://星星点灯.jpsnfb.buzz/极品" target="_blank">https://星星点灯.jpsnfb.buzz/极品</a></td></tr>
 	
             </table>
-            <div class="youlian">发送任意邮件到：@gmail.com，自动回复最新地址</div>
+            <div class="youlian">永久网址www.jpsn.top</div>
+			 <div class="youlian">** 如果点击进入后打不开本站，请换（电信或联通）网络在访问本站，移动网络频繁屏蔽本站～。</div>
 	     <div class="youlian">*近期部分国产浏览器屏蔽网址，推荐使用Chrome谷歌浏览器、Edge浏览器访问。</div>
             <div class="des">CopyRight © 2023 极品少女</div>
         </div>
