--- a/ywsp/index.html
+++ b/ywsp/index.html
@@ -39,11 +39,13 @@
             <div class="x2"><b>·</b>&nbsp;&nbsp;✨重要提醒✨收藏本页面，避免迷路！&nbsp;&nbsp;<b>·</b></div>
             <table class="xianlu">
                 <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://学而不厌.youwutv.buzz/尤物" target="_blank">https://学而不厌.youwutv.buzz/尤物</a></td></tr>
-	
+	  <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://学而不厌.youwutv.buzz/尤物" target="_blank">https://学而不厌.youwutv.buzz/尤物</a></td></tr>
+		      <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://学而不厌.youwutv.buzz/尤物" target="_blank">https://学而不厌.youwutv.buzz/尤物</a></td></tr>
             </table>
-            <div class="youlian">发送任意邮件到：@gmail.com，自动回复最新地址</div>
-	     <div class="youlian">*近期部分国产浏览器屏蔽网址，推荐使用Chrome谷歌浏览器、Edge浏览器访问。</div>
-            <div class="des">CopyRight © 2023 尤物视频</div>
+            <div class="youlian">永久网址www.ywsp.top</div>
+			     <div class="youlian"> 如果点击进入后打不开本站，请换（电信或联通）网络在访问本站，移动网络频繁屏蔽本站～</div>
+	     <div class="youlian">近期部分国产浏览器屏蔽网址，推荐使用Chrome谷歌浏览器、Edge浏览器访问。</div>
+            <div class="des">CopyRight © 2025 尤物视频</div>
         </div>
 
 </html>
