--- a/jpsn/index.html
+++ b/jpsn/index.html
@@ -44,8 +44,8 @@
 	
             </table>
             <div class="youlian">永久网址www.jpsn.top</div>
-			 <div class="youlian">** 如果点击进入后打不开本站，请换（电信或联通）网络在访问本站，移动网络频繁屏蔽本站～。</div>
-	     <div class="youlian">*近期部分国产浏览器屏蔽网址，推荐使用Chrome谷歌浏览器、Edge浏览器访问。</div>
+			 <div class="youlian">如果点击进入后打不开本站，请换（电信或联通）网络在访问本站，移动网络频繁屏蔽本站～</div>
+	     <div class="youlian">近期部分国产浏览器屏蔽网址，推荐使用Chrome谷歌浏览器、Edge浏览器访问。</div>
             <div class="des">CopyRight © 2023 极品少女</div>
         </div>
 
