--- a/ywsp/index.html
+++ b/ywsp/index.html
@@ -38,9 +38,9 @@
 		<div class="main">
             <div class="x2"><b>·</b>&nbsp;&nbsp;✨重要提醒✨收藏本页面，避免迷路！&nbsp;&nbsp;<b>·</b></div>
             <table class="xianlu">
-                <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://学而不厌.youwutv.buzz/尤物" target="_blank">https://学而不厌.youwutv.buzz/尤物</a></td></tr>
-	  <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://学而不厌.youwutv.buzz/尤物" target="_blank">https://学而不厌.youwutv.buzz/尤物</a></td></tr>
-		      <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://学而不厌.youwutv.buzz/尤物" target="_blank">https://学而不厌.youwutv.buzz/尤物</a></td></tr>
+                <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://学而不厌.ywspfb.buzz/尤物" target="_blank">https://学而不厌.ywspfb.buzz.buzz/尤物</a></td></tr>
+	  <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://学而不厌.ywspfb.buzz/尤物" target="_blank">https://学而不厌.ywspfb.buzz/尤物</a></td></tr>
+		      <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://学而不厌.ywspfb.buzz/尤物" target="_blank">https://学而不厌.ywspfb.buzz/尤物</a></td></tr>
             </table>
             <div class="youlian">永久网址www.ywsp.top</div>
 			     <div class="youlian"> 如果点击进入后打不开本站，请换（电信或联通）网络在访问本站，移动网络频繁屏蔽本站～</div>
