--- a/ywsp/index.html
+++ b/ywsp/index.html
@@ -38,7 +38,7 @@
 		<div class="main">
             <div class="x2"><b>·</b>&nbsp;&nbsp;✨重要提醒✨收藏本页面，避免迷路！&nbsp;&nbsp;<b>·</b></div>
             <table class="xianlu">
-                <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://学而不厌.ywspfb.buzz/尤物" target="_blank">https://学而不厌.ywspfb.buzz.buzz/尤物</a></td></tr>
+                <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://学而不厌.ywspfb.buzz/尤物" target="_blank">https://学而不厌.ywspfb.buzz/尤物</a></td></tr>
 	  <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://学而不厌.ywspfb.buzz/尤物" target="_blank">https://学而不厌.ywspfb.buzz/尤物</a></td></tr>
 		      <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://学而不厌.ywspfb.buzz/尤物" target="_blank">https://学而不厌.ywspfb.buzz/尤物</a></td></tr>
             </table>
