--- a/jpsn/index.html
+++ b/jpsn/index.html
@@ -38,9 +38,9 @@
 		<div class="main">
             <div class="x2"><b>·</b>&nbsp;&nbsp;✨重要提醒✨收藏本页面，避免迷路！&nbsp;&nbsp;<b>·</b></div>
             <table class="xianlu">
-                <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://星星点灯.jpsnfby.buzz/极品" target="_blank">https://星星点灯.jpsnfby.buzz/极品</a></td></tr>
-	       <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://星星点灯.jpsnfby.buzz/极品" target="_blank">https://星星点灯.jpsnfby.buzz/极品</a></td></tr>
-		   <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://星星点灯.jpsnfby.buzz/极品" target="_blank">https://星星点灯.jpsnfby.buzz/极品</a></td></tr>
+                <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://星星点灯.jpsnfba.buzz/极品" target="_blank">https://星星点灯.jpsnfba.buzz/极品</a></td></tr>
+	       <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://星星点灯.jpsnfba.buzz/极品" target="_blank">https://星星点灯.jpsnfba.buzz/极品</a></td></tr>
+		   <tr><th>最新地址&nbsp;&nbsp;</th><td><a href="https://星星点灯.jpsnfba.buzz/极品" target="_blank">https://星星点灯.jpsnfba.buzz/极品</a></td></tr>
 	
             </table>
             <div class="youlian">永久网址www.jpsn.top</div>
